# duckdb-pdf

./: CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
src/: pdf_extension.cpp  pdf_scanner_extension.cpp
src/include/: pdf_extension.hpp  pdf_scanner_extension.hpp
test/sql/: pdf.test
